--- a/application/src/main/resources/sass/default/application-screen/odyssey/_loadout.scss
+++ b/application/src/main/resources/sass/default/application-screen/odyssey/_loadout.scss
@@ -132,18 +132,22 @@
             }
 
             @at-root .loadout-modification-popover {
+              -fx-padding: 0.25em;
               > .border {
                 -fx-stroke: $border-color-white !important;
                 -fx-stroke-width: 0.1em !important;
                 -fx-fill: $background-color-dark !important;
               }
 
-              .grid {
+              .grid-weapon {
                 -fx-background-color: $background-color-dark;
-                -fx-padding: 0.25em;
                 @include hvGap(0.25em);
-                @include fixedHeight(31em);
-                //-fx-fit-to-height: true;
+                @include fixedWidth(30em);
+              }
+              .grid-suit {
+                -fx-background-color: $background-color-dark;
+                @include hvGap(0.25em);
+                @include fixedWidth(37.5725em);
               }
 
               .name {
@@ -151,6 +155,9 @@
                 @include fixedWidth(7.25em);
                 -fx-text-alignment: center;
                 -fx-alignment: center;
+              }
+              .mod-image {
+                @include fixedWidth(7.25em);
               }
             }
           }
